fixed up a spacing and optimized for smaller screens

--- a/src/components/contacts/Contacts.css
+++ b/src/components/contacts/Contacts.css
@@ -1,25 +1,15 @@
-html body.contacts {
+.contacts {
   background-color: #1c4bcc;
+  width: 100%;
+  height: 100vh;
 }
 
 .contacts-description {
   font-size: 36px;
-  position: absolute;
-  left: 150px;
-  top: 250px;
   margin-bottom: 20px;
 }
 
-.title {
-  position: absolute;
-  left: 150px;
-  top: 90px;
-}
-
 .social {
-  position: relative;
-  left: 150px;
-  top: 200px;
   font-size: 30px;
 }
 
