--- a/src/components/main/Main.css
+++ b/src/components/main/Main.css
@@ -1,5 +1,7 @@
-html body.main {
+.main {
   background-color: #1c4bcc;
+  width: 100%;
+  height: 100vh;
 }
 
 .logo-wrapper {
