--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -1,41 +1,39 @@
-html body.projects {
+.projects {
   background-color: white;
   color: #1c4bcc;
+  width: 100%;
+  height: 100vh;
 }
 
-.title {
-  position: absolute;
-  left: 150px;
-  top: 90px;
+.container {
+  margin-left: 100px;
+  margin-right: 100px;
 }
 
 .project-description {
   font-size: 36px;
-  position: absolute;
-  left: 150px;
-  top: 200px;
+
   color: black;
 }
 
 .display-wrapper {
-  position: absolute;
+  position: relative;
   display: inline-flex;
   text-align: center;
-  left: 50px;
-  top: 250px;
 }
 
 .tech-wrapper {
+  position: absolute;
+  margin: 10px;
   border-left: double;
   border-left-width: 10px;
   border-color: #1c4bcc;
   padding: 20px;
   border-radius: 5px;
+  right: 0;
+  top: 250px;
   width: 200px;
   height: 400px;
-  position: absolute;
-  right: 50px;
-  top: 250px;
   color: #000;
   font-size: 26px;
   text-align: center;
@@ -44,4 +42,10 @@ html body.projects {
 .tech-logo {
   height: 100px;
   width: 100px;
+}
+
+@media only screen and (max-width: 1350px) {
+  .tech-wrapper {
+    position: static;
+  }
 }
